--- a/website/css/style.css
+++ b/website/css/style.css
@@ -276,6 +276,7 @@ img
 .infobox .logo
 {
   position:relative;
+  margin-top:6px;
   width:560px;
   height:180px;
   left-margin:20px;
@@ -303,6 +304,15 @@ img
   top:62px;
   width:320px;
   font-size:14px;
+}
+
+.infobox .generaltext
+{
+  position: absolute;
+  left:-150px;
+  top:220px;
+  width:1000px;
+  font-size:150%;
 }
 
 .menubar
@@ -352,7 +362,7 @@ img
   text-decoration:underline;
 }
 
-.download_bar
+.selection_bar
 {
   border:1px solid #A2A4A5;
   position:absolute;
@@ -387,17 +397,19 @@ img
 
 .download_button
 {
-  color:#333333;
+  position: absolute;
+  left:199px;
+  top:181px;
+  width:200px;
+  height:35px;
+  color:#FFFFFF;
   text-align:center;
   font-size:18px;
   font-weight:bold;
-  position:relative;
-  width:101px;
-  height:40px;
   float:left;
-  margin:8px 16px 7px 7px;
-  padding:5px;
-  background:#cbcbcb;
+  margin:8px 8px 7px 7px;
+  padding:2px;
+  background:#4D4D4D;
   border:1px solid #A2A4A5;
   border-radius:5px;
   -webkit-border-radius:5px;
@@ -411,12 +423,44 @@ img
   cursor:pointer;
 }
 
+.styled-longselect select
+{
+  background: transparent url("../img/arrow.png") no-repeat top 5px right 5px;
+  background-size: 16px 18px;
+  color: #FFFFFF;
+  width: 246px;
+  margin-top: -5px;
+  margin-left: 3px;
+  margin-right: 10px;
+  padding-left: 8px;
+  font-size: 16px;
+  line-height: 1;
+  border:1px solid #A2A4A5;
+  box-sizing:border-box;
+  -webkit-box-sizing:border-box;
+  -moz-box-sizing:border-box;
+  -o-box-sizing:border-box;
+  border-radius: 5px;
+  -webkit-border-radius:5px;
+  -moz-border-radius:5px;
+  -ms-border-radius:5px;
+  -o-border-radius:5px;
+  height: 30px;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  cursor:pointer;
+}
+
 .styled-select select
 {
   background: transparent url("../img/arrow.png") no-repeat top 5px right 5px;
   background-size: 16px 18px;
   color: #FFFFFF;
-  width: 112px;
+  width: 108px;
   margin-top: -5px;
   margin-left: 3px;
   margin-right: 10px;
