--- a/website/css/style.css
+++ b/website/css/style.css
@@ -59,7 +59,102 @@ img
 {
   display:none;
 }
-
+.detail
+{
+  content:none;
+  background:#FFFFFF;
+  position:absolute;
+  z-index:10;
+  top:107px;
+  left:426px;
+  width:99px;
+  height:117px;
+  float:left;
+  margin:0 0 20px 20px;
+  padding:4px;
+  counter-increment:none;
+  float:left;
+  border:1px solid #A2A4A5;
+  -webkit-border-top-right-radius:2px;
+  -webkit-border-bottom-right-radius:2px;
+  -webkit-border-bottom-left-radius:2px;
+  -webkit-border-top-left-radius:2px;
+  -moz-border-radius-topright:2px;
+  -moz-border-radius-bottomright:2px;
+  -moz-border-radius-bottomleft:2px;
+  -moz-border-radius-topleft:2px;
+  -ms-border-radius-topright:2px;
+  -ms-border-radius-bottomright:2px;
+  -ms-border-radius-bottomleft:2px;
+  -ms-border-radius-topleft:2px;
+  -o-border-radius-topright:2px;
+  -o-border-radius-bottomright:2px;
+  -o-border-radius-bottomleft:2px;
+  -o-border-radius-topleft:2px;
+  border-top-right-radius:2px;
+  border-bottom-right-radius:2px;
+  border-bottom-left-radius:2px;
+  border-top-left-radius:2px;
+  -moz-background-clip:padding;
+  -webkit-background-clip:padding-box;
+  background-clip:padding-box;
+  -webkit-box-shadow:0 1px 3px 0 rgba(0, 0, 0, 0.25);
+  -moz-box-shadow:0 1px 3px 0 rgba(0, 0, 0, 0.25);
+  -ms-box-shadow:0 1px 3px 0 rgba(0, 0, 0, 0.25);
+  -o-box-shadow:0 1px 3px 0 rgba(0, 0, 0, 0.25);
+  box-shadow:0 1px 3px 0 rgba(0, 0, 0, 0.25);
+  -webkit-transition:all 0.5s ease-out;
+  -moz-transition:all 0.5s ease-out;
+  transition:all 0.5s ease-out;
+  -webkit-box-sizing:border-box;
+  -moz-box-sizing:border-box;
+  -o-box-sizing:border-box;
+  box-sizing:border-box;
+}
+.detail .element
+{
+  font-size:26px;
+  margin-top:15px;
+  line-height:1;
+  text-align:center;
+}
+.detail .l_top
+{
+  margin-top:3px;
+  margin-bottom:4px;
+  font-size:12px;
+  line-height:1;
+  text-align:left;
+}
+.detail .r_top
+{
+  margin-top:26px;
+  margin-bottom:4px;
+  font-size:12px;
+  line-height:1;
+  text-align:right;
+}
+.detail .l_follow
+{
+  margin-top:4px;
+  font-size:12px;
+  line-height:1;
+  text-align:left;
+}
+.detail .r_follow
+{
+  margin-top:4px;
+  font-size:12px;
+  line-height:1;
+  text-align:right;
+}
+.detail .valence
+{
+  margin-top:-102px;
+  font-size:16px;
+  line-height:1;
+  text-align:right;
+}
 .plugin
 {
   position:relative;
@@ -156,24 +251,67 @@ img
 }
 .plugin .element
 {
-  margin-bottom:5px;
-  font-size:26px;
+  font-size:18px;
   line-height:1;
   text-align:center;
+}
+.plugin .valence
+{
+  margin-top:-48px;
+  font-size:12px;
+  line-height:1;
+  text-align:right;
+
+}
+.plugin .l_top
+{
+  margin-top:-6px;
+  font-size:8px;
+  line-height:1;
+  text-align:left;
+
+}
+.plugin .l_follow
+{
+  margin-top:0px;
+  font-size:8px;
+  line-height:1;
+  text-align:left;
+
+}
+.plugin .r_top
+{
+  margin-top:11px;
+  font-size:8px;
+  line-height:1;
+  text-align:right;
+
+}
+.plugin .r_follow
+{
+  margin-top:0px;
+  font-size:8px;
+  line-height:1;
+  text-align:right;
+
 }
 .plugin .name-wrap
 {
   display:table;
   width:100%;
   height:44px;
-  margin-top:-12px;
+  margin-top:-15px;
 }
 .plugin .name-wrap-double
 {
   display:table;
   width:100%;
   height:44px;
-  margin-top:-15px;
+  margin-top:-17px;
+}
+.plugin .empty
+{
+  margin-top:10px;
 }
 .plugin .name-wrap .name
 {
@@ -195,6 +333,11 @@ img
 .plugin
 {
   cursor:pointer;
+}
+.plugin.detail_l
+{
+  z-index:5;
+  counter-increment:none;
 }
 .plugin:before
 {
