--- a/website/css/style.css
+++ b/website/css/style.css
@@ -809,8 +809,8 @@ img
 {
   background:#FFFFFF;
   position:absolute;
-  z-index:20;
-  top:35px;
+  z-index:30;
+  top:34px;
   left:-155px;
   width:80px;
   color:#FFFFFF;
@@ -823,13 +823,5 @@ img
   background:#4D4D4D;
   border:1px solid #A2A4A5;
   border-radius:5px;
-  -webkit-border-radius:5px;
-  -moz-border-radius:5px;
-  -ms-border-radius:5px;
-  -o-border-radius:5px;
-  box-sizing:border-box;
-  -webkit-box-sizing:border-box;
-  -moz-box-sizing:border-box;
-  -o-box-sizing:border-box;
-  cursor:pointer;
-}
+  animation: zoomIn 4s 1;
+ }
